[metadata]
name = 'audapter'
version = '0.0.1'
description = 'Adaptive Sound Processing'
author = 'borley1211'
author_email = 'km.isetan@gmail.com'
license = 'MIT'
url = 'https://github.com/_/audapter'

[requires]
python_version = ['2.7', '3.5', '3.6', '3.8', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
