[metadata]
name = adaptune
version = 0.0.1
description = Adaptive sound processing
long_description = file:README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/borley1211/adaptune

[options]
package_dir = .
packages = metadata.name
install_requires = # パッケージ自身の依存ライブラリ
    numpy = "*"
    scipy = "*"
    matplotlib = "*"
    typing = "*"
    pyalsaaudio = "*"
    librosa = "*"
    padasip = "*"

[flake8]
exclude = __init__.py
max_line_length = 89
ignore = E203,W293,W503,W504,E501,W605,F403,E999

[mypy]
ignore_missing_imports = 1
