[metadata]
name = adaptune
version = file:adaptune/VERSION
description = Adaptive sound processing
long_description = file:README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/borley1211/adaptune

[options]
include_package_data = True
zip_safe = False
python_requires = >=3.4
package_dir = .
packages = adaptune
install_requires = # パッケージ自身の依存ライブラリ
    numpy = "*"
    scipy = "*"
    matplotlib = "*"
    typing = "*"
    pyalsaaudio = "*"
    librosa = "*"
    padasip = "*"

[flake8]
exclude = __init__.py
max_line_length = 89
ignore = E203,W293,W503,W504,E501,W605,F403,E999

[mypy]
ignore_missing_imports = True
